...
    //MARK:- IBAction Methods
    @IBAction func addNewButtonClicked(_ sender: Any) {
        addNewDropDown.anchorView = addNewButton
        
        addNewDropDown.bottomOffset = CGPoint(x: 0, y:(addNewDropDown.anchorView?.plainView.bounds.height)!)
        addNewDropDown.backgroundColor = UIColor.white
        addNewDropDown.dataSource = ["Visit", "Event", "Action Item", "Note"]
        self.addNewDropDown.textFont = UIFont(name: "Ubuntu", size: 14)!
        self.addNewDropDown.textColor = UIColor.black
        
        addNewDropDown.show()
        
        addNewDropDown.selectionAction = {(index: Int, item: String) in
...
